--- a/microserviceconfig-server/src/main/resources/config/loan-product-mgr-service.yaml
+++ b/microserviceconfig-server/src/main/resources/config/loan-product-mgr-service.yaml
@@ -8,3 +8,19 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8081/eureka/
+spring:
+  sql:
+    init:
+      mode: always
+  datasource:
+    url: jdbc:postgresql://localhost:5432/loanproducts
+    username: postgres
+    password: PenangTrang!
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
