correct authentication for postgress for loan manager

--- a/microserviceconfig-server/src/main/resources/config/loanmanagement-service.yaml
+++ b/microserviceconfig-server/src/main/resources/config/loanmanagement-service.yaml
@@ -11,7 +11,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/loanmnagement
     username: postgres
-    password: postgres!
+    password: PenangTrang!
   jpa:
     hibernate:
       ddl-auto: create-drop
