--- a/microserviceconfig-server/src/main/resources/config/notifications-service.yaml
+++ b/microserviceconfig-server/src/main/resources/config/notifications-service.yaml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/loannotifications
     username: postgres
-    password: postgres!
+    password: PenangTrang!
   jpa:
     hibernate:
       ddl-auto: create-drop
